<resources>
    <string name="app_name">The Archive</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit">edit</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="addItem">add item</string>
    <string name="set_title">Set a title</string>
    <string name="set_description">Introduce a description</string>
    <string name="done">done</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="addGlobalList">Introduce a name</string>
    <string name="next">next</string>
    <string name="addPrivateList">add new section</string>
    <string name="errorIntroduceTitle">You must enter a new name.</string>
    <string name="duplicate">duplicate</string>
    <string name="dialogEditItem">Edit item</string>
    <string name="dialogAddItem">Add item</string>
    <string name="settings">Settings</string>
    <string name="confirm_delete">This will permanently delete the list.</string>
    <string name="title_delete_list">Delete list</string>
    <string name="list_deleted">List deleted</string>
    <string name="list_created">List created</string>
    <string name="title_create_list">Create list</string>
    <string name="errorIntroduceName">You must introduce a name.</string>
    <string name="edit_section">Edit section</string>
    <string name="section_name_changed">Section name changed</string>
    <string name="section_duplicated">Section duplicated</string>
    <string name="unavailable">Temporary unavailable</string>
    <string name="change_theme">Switch theme</string>
    <string name="delete_all">Delete all lists</string>
    <string name="must_close_app">The changes will take effect when you restart the app.</string>
    <string name="main_screen">Main screen</string>
    <string name="create_global_list">Add new list</string>
    <string name="create_folder">Create folder - WIP</string>
    <string name="stats">Stats - WIP</string>
    <string name="welcome">Welcome to The Archive</string>
    <string name="set_date">Start date</string>
    <string name="set_end_date">End date</string>
    <string name="error">An error has occurred.</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="add_category">Add category</string>
    <string name="general">General</string>
    <string name="no_category">There has to be at least one category</string>
    <string name="show_stats">Show stats</string>
    <string name="show_stats_view">No stats available</string>
    <string name="stats_title">Stats</string>
    <string name="delete_category">Delete category</string>
    <string name="choose_category">Choose a category</string>
    <string name="choose_subcategory">Choose a subcategory</string>
    <string name="dialog_title_close_filter">Reset filter</string>
    <string name="dialog_message_close_filter">Do you want to reset the filter so that you can perform operations on the list?</string>
    <string name="import_export_lists">Import / export data</string>
    <string name="export_lists">Export lists</string>
    <string name="import_lists">Import lists</string>
    <string name="export_import_message">Do you want to import data from a file or export the current data to a file?</string>
    <string name="file_save_download">File saved in downloads folder</string>
    <string name="delete_all_confirmation">Are you sure you want to delete all lists? This action cannot be undone.</string>
    <string name="no_lists">There has to be at least one list</string>
    <string name="lists_deleted">Lists deleted</string>
    <string name="create_section">Create section</string>
    <string name="create_filter">Create filter</string>
    <string name="filter_exact_match">Exact match</string>
    <string name="filter_any_match">Any match</string>
    <string name="filter">Filter</string>
    <string name="filter_null">You must fill in at least one field</string>
</resources>